# Odin-Fusion

./: README.md  dfx.json  package-lock.json  package.json
src/Odin_Fusion_backend/: Cargo.toml
src/Odin_Fusion_backend/src/: lib.rs
src/Odin_Fusion_frontend/: index.html  package.json  tailwind.config.js
src/Odin_Fusion_frontend/src/: App.jsx  index.scss  main.jsx
src/Odin_Fusion_frontend/src/Redux/: store.ts
src/Odin_Fusion_frontend/src/auth/: use-auth-client.tsx
src/Odin_Fusion_frontend/src/components/: AccentButton.jsx  AccordionComponent.jsx  AuthTrial.jsx  Feat.jsx  FeatureSection.jsx  Hero.jsx  Layout.jsx  MileStone.jsx  Navbar.jsx  Project.jsx  RoadMapSection.jsx  SectionCTA.jsx  TeamSection.jsx
src/Odin_Fusion_frontend/src/pages/: Explorer.jsx  Home.jsx  RoadMap.jsx  SignIn.jsx
src/Odins_Kitchen/: Types.mo  main.mo
