[package]
name = "Odin_Fusion_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11.0" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32.4", features = ["rand"] }
ic-btc-interface = "0.2.2"
hex = "0.4.3"
sha2 = "0.10.7"
# basic_bitcoin = { path = "../../src/basic_bitcoin/src/basic_bitcoin" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

# [workspace]
# members = [
#     "src/basic_bitcoin",
# ]w

